# power-analysis

./: README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
dev-tools/: format.sh  lint.sh  test.sh
examples/: getting_started.py  landscape.py  open-llm-analysis.py  plots.py  powers.csv.gzip
power/: __init__.py  compute_power.py  dgps.py  effects.py  estimator.py  logging.py  metrics.py  plot.py  stats_tests.py  true_effects.py  types.py  utils.py
power/tasks/: __init__.py  binary_classification.py
tests/: test.py  test_landscape.py  test_metrics.py  test_power.py  test_speed.py  test_stat_test.py
